assets/css/output.css
/* ... */
.py-\[10px\] {
  padding-top: 10px;
  padding-bottom: 10px;
}

.px-\[3\.125rem\] {
  padding-left: 3.125rem;
  padding-right: 3.125rem;
}

.px-10 {
  padding-left: 2.5rem;
  padding-right: 2.5rem;
}

.py-10 {
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
}

.py-14 {
  padding-top: 3.5rem;
  padding-bottom: 3.5rem;
}

.py-\[0\.625rem\] {
  padding-top: 0.625rem;
  padding-bottom: 0.625rem;
}

.py-28 {
  padding-top: 7rem;
  padding-bottom: 7rem;
}

.px-2\.5 {
  padding-left: 0.625rem;
  padding-right: 0.625rem;
}

.py-16 {
  padding-top: 4rem;
  padding-bottom: 4rem;
}

.pr-8 {
  padding-right: 2rem;
}

.pr-0 {
  padding-right: 0px;
}

.pl-0 {
  padding-left: 0px;
}

.pt-2\.5 {
  padding-top: 0.625rem;
}

.pt-2 {
  padding-top: 0.5rem;
}

.pt-16 {
  padding-top: 4rem;
}

.pt-20 {
  padding-top: 5rem;
}

.pb-10 {
  padding-bottom: 2.5rem;
}

.pt-5 {
  padding-top: 1.25rem;
}

.pt-10 {
  padding-top: 2.5rem;
}

.pb-6 {
  padding-bottom: 1.5rem;
}

.pt-8 {
  padding-top: 2rem;
}

.pl-6 {
  padding-left: 1.5rem;
}

.pt-\[56\.25\%\] {
  padding-top: 56.25%;
}

.text-left {
  text-align: left;
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

.text-start {
  text-align: start;
}

.font-roboto {
  font-family: Roboto, ui-sans-serif, system-ui;
}

.font-robotoSlab {
  font-family: Roboto Slab, serif;
}

.font-sans {
  font-family: Poppins, ui-sans-serif, system-ui;
}

.text-base {
  font-size: 1rem;
  line-height: 1.5rem;
}

.text-3xl {
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.text-4xl {
  font-size: 2.25rem;
  line-height: 2.5rem;
}

.text-2xl {
  font-size: 1.5rem;
  line-height: 2rem;
}

.text-sm {
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.text-xl {
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.text-6xl {
  font-size: 3.75rem;
  line-height: 1;
}

.text-xs {
  font-size: 0.75rem;
  line-height: 1rem;
}

.text-\[1\.375rem\] {
  font-size: 1.375rem;
}

.text-\[1rem\] {
  font-size: 1rem;
}

.text-lg {
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.text-\[4\.5rem\] {
  font-size: 4.5rem;
}

.text-\[1\.75rem\] {
  font-size: 1.75rem;
}

.text-\[1\.25rem\] {
  font-size: 1.25rem;
}

.text-\[0\.8125rem\] {
  font-size: 0.8125rem;
}

.text-5xl {
  font-size: 3rem;
  line-height: 1;
}

.text-\[0\.813rem\] {
  font-size: 0.813rem;
}

.text-\[1\.5rem\] {
  font-size: 1.5rem;
}

.font-normal {
  font-weight: 400;
}

.font-light {
  font-weight: 300;
}

.font-medium {
  font-weight: 500;
}

.font-bold {
  font-weight: 700;
}

.font-semibold {
  font-weight: 600;
}

.font-thin {
  font-weight: 100;
}

.uppercase {
  text-transform: uppercase;
}

.lowercase {
  text-transform: lowercase;
}

.capitalize {
  text-transform: capitalize;
}

.italic {
  font-style: italic;
}

.leading-\[3\.75rem\] {
  line-height: 3.75rem;
}

.leading-9 {
  line-height: 2.25rem;
}

.leading-10 {
  line-height: 2.5rem;
}

.leading-\[3\.5rem\] {
  line-height: 3.5rem;
}

.leading-\[3rem\] {
  line-height: 3rem;
}

.leading-8 {
  line-height: 2rem;
}

.leading-\[50px\] {
  line-height: 50px;
}

.leading-7 {
  line-height: 1.75rem;
}

.leading-5 {
  line-height: 1.25rem;
}

.leading-\[3\.25rem\] {
  line-height: 3.25rem;
}

.leading-\[1\.2\] {
  line-height: 1.2;
}

.leading-\[53px\] {
  line-height: 53px;
}

.leading-\[2\.5rem\] {
  line-height: 2.5rem;
}

.leading-\[18px\] {
  line-height: 18px;
}

.leading-\[1\.125rem\] {
  line-height: 1.125rem;
}

.leading-\[3\.125rem\] {
  line-height: 3.125rem;
}

.tracking-widest {
  letter-spacing: 0.1em;
}

.tracking-wider {
  letter-spacing: 0.05em;
}

.tracking-wide {
  letter-spacing: 0.025em;
}

.-tracking-\[0\.009rem\] {
  letter-spacing: -0.009rem;
}

.text-white {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.text-slate-900 {
  --tw-text-opacity: 1;
  color: rgb(15 23 42 / var(--tw-text-opacity));
}

.text-slate-100 {
  --tw-text-opacity: 1;
  color: rgb(241 245 249 / var(--tw-text-opacity));
}

.text-green-100 {
  --tw-text-opacity: 1;
  color: rgb(220 252 231 / var(--tw-text-opacity));
}

.text-lime-200 {
  --tw-text-opacity: 1;
  color: rgb(217 249 157 / var(--tw-text-opacity));
}

.text-lime-100 {
  --tw-text-opacity: 1;
  color: rgb(236 252 203 / var(--tw-text-opacity));
}

.text-white\/80 {
  color: rgb(255 255 255 / 0.8);
}

.text-black\/70 {
  color: rgb(0 0 0 / 0.7);
}

.text-green-500 {
  --tw-text-opacity: 1;
  color: rgb(34 197 94 / var(--tw-text-opacity));
}

.text-white\/50 {
  color: rgb(255 255 255 / 0.5);
}

.text-\[\#3b5998\] {
  --tw-text-opacity: 1;
  color: rgb(59 89 152 / var(--tw-text-opacity));
}

.text-\[\#00aced\] {
  --tw-text-opacity: 1;
  color: rgb(0 172 237 / var(--tw-text-opacity));
}

.text-\[\#dc4a38\] {
  --tw-text-opacity: 1;
  color: rgb(220 74 56 / var(--tw-text-opacity));
}

.text-\[\#0077b5\] {
  --tw-text-opacity: 1;
  color: rgb(0 119 181 / var(--tw-text-opacity));
}

.text-\[\#d93175\] {
  --tw-text-opacity: 1;
  color: rgb(217 49 117 / var(--tw-text-opacity));
}

.text-\[\#fe0002\] {
  --tw-text-opacity: 1;
  color: rgb(254 0 2 / var(--tw-text-opacity));
}

.text-\[\#bd081b\] {
  --tw-text-opacity: 1;
  color: rgb(189 8 27 / var(--tw-text-opacity));
}

.text-black {
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
}

.text-green-400 {
  --tw-text-opacity: 1;
  color: rgb(74 222 128 / var(--tw-text-opacity));
}

.text-lime-500 {
  --tw-text-opacity: 1;
  color: rgb(132 204 22 / var(--tw-text-opacity));
}

.text-gray-500 {
  --tw-text-opacity: 1;
  color: rgb(107 114 128 / var(--tw-text-opacity));
}

.text-gray-200 {
  --tw-text-opacity: 1;
  color: rgb(229 231 235 / var(--tw-text-opacity));
}

.text-gray-400 {
  --tw-text-opacity: 1;
  color: rgb(156 163 175 / var(--tw-text-opacity));
}

.text-gray-300 {
  --tw-text-opacity: 1;
  color: rgb(209 213 219 / var(--tw-text-opacity));
}

.text-\[\#689f38\] {
  --tw-text-opacity: 1;
  color: rgb(104 159 56 / var(--tw-text-opacity));
}
/* ... */

